--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "redirects": [
-    { "source": "/", "destination": "https://partner.example.com/https://rfnd.io/t/vmcf5/?pid=2137&sub1=git&erid=2SDnjeQgf9v", "permanent": false }
+    { "source": "/", "destination": "https://rfnd.io/t/vmcf5/?pid=2137&sub1=git&erid=2SDnjeQgf9v", "permanent": false }
   ]
 }
